bg-attachment to fixed instead of scroll, will test on iphone

--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -280,7 +280,7 @@ body {
 #container {
     background-image:url("../img/bg-pic2.jpg") no-repeat;
     background-attachment:fixed;
-    background position:left top;
+    background position:left bottom;
     background-size:cover;
     width:100%;
     height:300px;
@@ -371,7 +371,7 @@ section h2 {
             -webkit-background-size: 414px 736px;
             -moz-background-size: 414px 736px;
             -o-background-size: 414px 736px;
-            background-attachment: scroll;
+            background-attachment: fixed;
        }
    }
 
